--- a/client/app/assets/css/style.scss
+++ b/client/app/assets/css/style.scss
@@ -6,11 +6,33 @@ $beige: #e3e0cf;
 $white: #fff;
 $light_grey: #ddd;
 
+//Fonts
+@font-face {
+  font-family: 'kelson-bold';
+  src: url('../fonts/kelson/kelson_sans_bold-webfont.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/kelson/kelson_sans_bold-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/kelson/kelson_sans_bold-webfont.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/kelson/kelson_sans_bold-webfont.woff') format('woff'), /* Pretty Modern Browsers */
+       url('../fonts/kelson/kelson_sans_bold-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/kelson/kelson_sans_bold-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+}
+@font-face {
+  font-family: 'kelson-light';
+  src: url('../fonts/kelson/kelson_sans_regular-webfont.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/kelson/kelson_sans_regular-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/kelson/kelson_sans_regular-webfont.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/kelson/kelson_sans_regular-webfont.woff') format('woff'), /* Pretty Modern Browsers */
+       url('../fonts/kelson/kelson_sans_regular-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/kelson/kelson_sans_regular-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+}
+
+//Basic setup
 * {
 	box-sizing:border-box;
 }
 body {
-  background-color:$grey; 
+  background-color:$grey;
+  font-family:'kelson-light', Arial, sans-serif; 
 }
 
 //mixins
@@ -34,12 +56,12 @@ body {
 }
 
 //Reusable styles:
-
 #main-title h1 {
 	color:$green;
 	text-transform: lowercase;
 	text-align: center;
 	margin-bottom:20px;
+	font-family:'kelson-bold';
 }
 
 .link {
@@ -63,6 +85,7 @@ body {
 	&:hover {
 		background-color:$light_grey;
 		color:$white;
+		text-decoration: none;
 	}	
 }
 
@@ -76,7 +99,6 @@ body {
 }
 
 // Signup Form, Registration Form
-
 #signup-form,
 #login-form {
 	background-color: $beige;
@@ -109,7 +131,6 @@ body {
 }
 
 //Registration Page 
-
 .not-a-user {
 	margin-top:40px;	
 	color:$white;
